--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,11 @@ target_include_directories(MemLib
 
 set(MEMLIB_PUBLIC_HEADERS
     code/public/memlib.hpp
+    code/public/memlib/address.hpp
     code/public/memlib/hook.hpp
     code/public/memlib/macros.hpp
     code/public/memlib/memory.hpp
+    code/public/memlib/module.hpp
     code/public/memlib/os.hpp
     code/public/memlib/re_helper_macros.hpp
     code/public/memlib/thread.hpp
@@ -30,9 +32,11 @@ set(MEMLIB_PUBLIC_HEADERS
 
 set(MEMLIB_PRIVATE_SOURCES
     code/private/internal.hpp
+    code/private/address.cpp
     code/private/hook.cpp
     code/private/memlib.cpp
     code/private/memory.cpp
+    code/private/module.cpp
     code/private/thread.cpp
 )
 
